some layout bugs fixed, feedback form updated

--- a/static/src/blocks/index/page-header/page-header.scss
+++ b/static/src/blocks/index/page-header/page-header.scss
@@ -147,8 +147,6 @@ $nav-sticky-border-color: #e4e4e4;
 .lang-list {
   &-wrapper {
     position: absolute;
-    right: 1px;
-    bottom: 22px;
     width: 50px;
     border: 1px solid lightgrey;
     border-radius: 3px;
